packages/components/paginator/src/paginator.scss
:host {
  align-items: center;
  background: color-mix(
    in srgb,
    var(--_bg-color),
    var(--_bg-mix-color) calc(100% * var(--_bg-opacity))
  );
  display: flex;
  gap: var(--sl-size-100);
  min-inline-size: 0;
}

:host([width='xs']) {
  sl-button,
  sl-menu-button {
    display: none;
  }

  .wrapper {
    align-items: center;
    display: flex;
    flex-wrap: wrap;
    gap: var(--sl-size-100);
    justify-content: center;
  }

  sl-select {
    min-inline-size: var(--sl-size-1000);
  }
}

.page {
  box-sizing: border-box;
  color: var(--sl-color-foreground-neutral-bold);
  flex-shrink: 0;
  inline-size: calc(1lh + (var(--sl-size-100) * 2));
  padding-inline: 0;
}

:host([size='sm']) {
  .page {
    inline-size: calc(1lh + var(--sl-size-050)); // 2 * padding of var(--sl-size-025)
  }
}

:host([size='lg']) {
  .page {
    inline-size: calc(1lh + (var(--sl-size-175) * 2));
  }
}

.current {
  --_bg-color: var(--sl-color-background-selected-subtle);
  --_bg-mix-color: var(--sl-color-background-primary-interactive-plain);
  --_bg-opacity: var(--sl-opacity-interactive-plain-idle);

  color: var(--sl-color-foreground-primary-bold);

  &:hover {
    --_bg-opacity: var(--sl-opacity-interactive-plain-hover);
  }

  &:active {
    --_bg-opacity: var(--sl-opacity-interactive-plain-active);
  }
}

:host([emphasis='bold']) .current {
  --_bg-color: var(--sl-color-background-selected-bold);
  --_bg-mix-color: var(--sl-color-background-selected-interactive-bold);

  color: var(--sl-color-foreground-primary-onBold);
}

:host([emphasis='bold']) .current:not(:hover, :active) {
  --_bg-opacity: var(--sl-opacity-interactive-bold-idle);
}

.wrapper {
  display: none;
}

